Pusheo la muestra de que siempre da lo mismo

--- a/crack_frequency_kld.ipynb
+++ b/crack_frequency_kld.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "nuclear-advantage",
+   "id": "floppy-italian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "contained-parameter",
+   "id": "federal-appendix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "animal-photograph",
+   "execution_count": 94,
+   "id": "compressed-watson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "western-toner",
+   "execution_count": 95,
+   "id": "vocal-hollywood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,13 @@
     "                        plugboard=Plugboard(PLUGBOARD_TUPLES),\n",
     "                        rotors=[RotorIII(offset=2),\n",
     "                                RotorII(offset=3),\n",
-    "                                RotorI(offset=5),\n",
-    "                                RotorIV(offset=7)])"
+    "                                RotorI(offset=5)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "outstanding-therapist",
+   "execution_count": 96,
+   "id": "provincial-exception",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "silent-pattern",
+   "execution_count": 99,
+   "id": "indoor-tenant",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Me genero todas las posibles combinaciones de los offsets de los rotores\n",
     "def crack(language_model, encrypted_message):\n",
-    "    offset_rotor_combinations = list(product(range(ENGLISH_ALPHABET_LEN), repeat = 4))\n",
+    "    offset_rotor_combinations = list(product(range(ENGLISH_ALPHABET_LEN), repeat = 3))\n",
+    "    print(len(offset_rotor_combinations))\n",
     "    kb_divergences = {}\n",
     "    i=0\n",
     "    for combination in combinations_rotores:\n",
@@ -103,60 +103,53 @@
     "                                          rotors=[\n",
     "                                              RotorIII(offset=combination[0]),\n",
     "                                              RotorII(offset=combination[1]),\n",
-    "                                              RotorI(offset=combination[2]),\n",
-    "                                              RotorIV(offset=combination[3])])\n",
+    "                                              RotorI(offset=combination[2])])\n",
     "        decrypted_message = enigma_with_given_offset.decrypt(encrypted_message)\n",
     "        kb_divergences[combination] = freq_kld_model.fitness(decrypted_message)\n",
     "        if(i % 10000 == 0): print(i, end = ' ')\n",
     "        i+=1\n",
     "    sorted_divergences = sorted(kb_divergences.items(), key=lambda x: x[1])\n",
-    "    return sorted_divergences[:10]"
+    "    return sorted_divergences[:50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "recorded-nickel",
+   "execution_count": 100,
+   "id": "expensive-amsterdam",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 10000 20000 30000 40000 50000 60000 70000 80000 90000 100000 110000 120000 130000 140000 150000 160000 170000 180000 190000 200000 210000 220000 230000 240000 250000 260000 270000 280000 290000 300000 310000 320000 330000 340000 350000 360000 370000 380000 390000 400000 410000 420000 430000 440000 450000 CPU times: user 1min 46s, sys: 212 ms, total: 1min 47s\n",
-      "Wall time: 1min 47s\n"
+      "17576\n",
+      "0 10000 20000 30000 "
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "[((23, 8, 8, 1), -0.3866025261775829),\n",
-       " ((8, 23, 22, 7), -0.3866025261775829),\n",
-       " ((21, 20, 17, 0), -0.3866025261775829),\n",
-       " ((5, 22, 5, 21), -0.3866025261775829),\n",
-       " ((11, 20, 12, 22), -0.3866025261775829),\n",
-       " ((7, 3, 11, 0), -0.3866025261775829),\n",
-       " ((9, 5, 3, 17), -0.3866025261775829),\n",
-       " ((24, 10, 11, 19), -0.3866025261775829),\n",
-       " ((11, 12, 11, 25), -0.3866025261775829),\n",
-       " ((13, 25, 18, 5), -0.3866025261775829)]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-99-7f3cf05dc9bc>\u001b[0m in \u001b[0;36mcrack\u001b[0;34m(language_model, encrypted_message)\u001b[0m\n\u001b[1;32m     13\u001b[0m                                               RotorI(offset=combination[2])])\n\u001b[1;32m     14\u001b[0m         \u001b[0mdecrypted_message\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menigma_with_given_offset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencrypted_message\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mkb_divergences\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombination\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfreq_kld_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdecrypted_message\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m10000\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/FIUBA/Cripto/cripto-enigma-tp/language_models/character_frequency_kld_language_model.py\u001b[0m in \u001b[0;36mfitness\u001b[0;34m(self, message)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;31m# TODO: Try with modified KB divergence.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkl_div\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "%%time\n",
     "type(frankestein_book)\n",
-    "crack(freq_kld_model, frankestein_book[100:120])"
+    "crack(freq_kld_model, frankestein_book[100:200])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chief-hacker",
+   "id": "increasing-underwear",
    "metadata": {},
    "outputs": [],
    "source": []
