--- a/M4 project cracking.ipynb
+++ b/M4 project cracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "widespread-hormone",
+   "id": "facial-saudi",
    "metadata": {},
    "source": [
     "Este notebook esta basado en el [paper](http://web.archive.org/web/20060720040135/http://members.fortunecity.com/jpeschel/gillog1.htm) utilizado para crackear en el M4 Project."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "comfortable-revelation",
+   "execution_count": 28,
+   "id": "desperate-dependence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,14 @@
     "import heapq\n",
     "from itertools import permutations\n",
     "from tqdm import tqdm\n",
-    "from tqdm.auto import trange"
+    "from tqdm.auto import trange\n",
+    "from multiprocessing import Pool\n",
+    "from functools import partial"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "artistic-decimal",
+   "id": "killing-arabic",
    "metadata": {},
    "source": [
     "# Orden de los rotores\n",
@@ -48,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "speaking-alert",
+   "id": "original-handling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ready-australia",
+   "id": "ready-society",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "amended-thesaurus",
+   "id": "sweet-lounge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "developing-money",
+   "id": "ceramic-ambassador",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "strange-frank",
+   "execution_count": 23,
+   "id": "rising-universal",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEST_TEXT_LENGHT = 2000\n",
+    "TEST_TEXT_LENGHT = 1000\n",
     "\n",
     "rotors, offsets, plugboard_tuples =get_random_config(10)\n",
     "random_config_key = config_to_string(rotors,offsets,plugboard_tuples)\n",
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyrighted-store",
+   "id": "different-underground",
    "metadata": {},
    "source": [
     "### Explorar todos los rotores"
@@ -154,54 +156,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "copyrighted-joining",
+   "execution_count": null,
+   "id": "smooth-clinic",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 608/17576 [00:08<04:07, 68.47it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-5cbcf701bdfe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m                       \u001b[0mplugboard\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPlugboard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                         rotors=[rot1(offset=off1), rot2(offset=off2), rot3(offset=off3)])\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mdecrypted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menigma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcyphertext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig_to_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrot1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrot2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrot3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0moff1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moff2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moff3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mic_scores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mic_char_freq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfitness\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdecrypted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/c/Users/gianc/Desktop/cripto-enigma-tp/enigma/enigma.py\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, cyphertext)\u001b[0m\n\u001b[1;32m     53\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0;32mreturn\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mdecrypted\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \"\"\"\n\u001b[0;32m---> 55\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcyphertext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mNoReturn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/c/Users/gianc/Desktop/cripto-enigma-tp/enigma/enigma.py\u001b[0m in \u001b[0;36mencrypt\u001b[0;34m(self, plaintext)\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreflector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreflect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mrot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrotors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m                 \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m             \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplugboard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m             \u001b[0mcyphertext\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/mnt/c/Users/gianc/Desktop/cripto-enigma-tp/enigma/rotors/rotor_with_mapping_and_notches.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, char)\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0;32mreturn\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mtransformed\u001b[0m \u001b[0mchar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \"\"\"\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchar\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Z'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0mchar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchar\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m26\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mchar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minverse_rotor_mapping\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      " 48%|████▊     | 8361/17576 [00:13<00:15, 605.48it/s]"
      ]
     }
    ],
    "source": [
     "scores = {}\n",
     "\n",
-    "for rot1, rot2, rot3 in permutations(POSSIBLE_ROTORS, 3):\n",
-    "    for offsets in tqdm(range(26**3), total=26**3):\n",
-    "        off1 = offsets % 26\n",
-    "        off2 = (offsets//26) % 26\n",
-    "        off3 = (offsets//(26**2)) % 26\n",
-    "        enigma = Enigma(reflector=ReflectorB(),\n",
+    "def compute_scores(rot1, rot2, rot3, offsets):\n",
+    "    off1 = offsets % 26\n",
+    "    off2 = (offsets//26) % 26\n",
+    "    off3 = (offsets//(26**2)) % 26\n",
+    "    enigma = Enigma(reflector=ReflectorB(),\n",
     "                      plugboard=Plugboard(), \n",
     "                        rotors=[rot1(offset=off1), rot2(offset=off2), rot3(offset=off3)])\n",
-    "        decrypted = enigma.decrypt(cyphertext)\n",
-    "        config = config_to_string([rot1, rot2, rot3], [off1,off2,off3], [])\n",
-    "        scores[config] = {'KLD': kld_char_freq.fitness(decrypted), \n",
-    "                          'IC': ic_char_freq.fitness(decrypted),\n",
-    "                          'Markov': markov_chain1.fitness(decrypted)}"
+    "    decrypted = enigma.decrypt(cyphertext)\n",
+    "    config = config_to_string([rot1, rot2, rot3], [off1,off2,off3], [])\n",
+    "    return config, {'KLD': kld_char_freq.fitness(decrypted), 'IC': ic_char_freq.fitness(decrypted), 'Markov': markov_chain1.fitness(decrypted)}\n",
+    "\n",
+    "for rot1, rot2, rot3 in permutations(POSSIBLE_ROTORS, 3):\n",
+    "    with Pool(8) as p:\n",
+    "        partial_compute = partial(compute_scores, rot1, rot2, rot3)\n",
+    "        r = list(tqdm(p.imap(partial_compute, range(26**3)), total=26**3))\n",
+    "    for c, s in r:\n",
+    "        scores[c] = s\n",
+    "        \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-bulgaria",
+   "id": "published-replica",
    "metadata": {},
    "outputs": [],
    "source": []
