--- a/crack_frequency_kld.ipynb
+++ b/crack_frequency_kld.ipynb
@@ -2,217 +2,242 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "boolean-guide",
+   "execution_count": 1,
+   "id": "scheduled-method",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import product\n",
-    "from random import shuffle\n",
-    "from tqdm import tqdm\n",
-    "from language_models.character_frequency_kld_language_model import CharacterFrequencyKLDLanguageModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "acceptable-castle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports de Enigma\n",
     "from enigma.enigma import Enigma\n",
-    "from enigma.plugboard import Plugboard\n",
-    "from enigma.reflectors.reflector import Reflector\n",
-    "from enigma.reflectors.reflector_b import ReflectorB\n",
-    "from enigma.reflectors.reflector_b_thin import ReflectorBThin\n",
-    "from enigma.reflectors.reflector_c import ReflectorC\n",
-    "from enigma.rotors.rotor import Rotor\n",
+    "from enigma.rotors.rotor_with_mapping_and_notches import RotorWithMappingAndNotches\n",
     "from enigma.rotors.rotor_I import RotorI\n",
     "from enigma.rotors.rotor_II import RotorII\n",
     "from enigma.rotors.rotor_III import RotorIII\n",
-    "from enigma.rotors.rotor_IV import RotorIV"
+    "from enigma.rotors.rotor_IV import RotorIV\n",
+    "from enigma.rotors.rotor_V import RotorV\n",
+    "from enigma.reflectors.reflector_b import ReflectorB\n",
+    "from enigma.plugboard import Plugboard\n",
+    "from language_models.character_frequency_kld_language_model import CharacterFrequencyKLDLanguageModel\n",
+    "from language_models.markov_chain_model import MarkovChainModel\n",
+    "\n",
+    "import timeit\n",
+    "import random\n",
+    "from collections import defaultdict\n",
+    "import heapq\n",
+    "from itertools import permutations, combinations\n",
+    "from tqdm import tqdm\n",
+    "from tqdm.auto import trange\n",
+    "from multiprocessing import Pool\n",
+    "from functools import partial\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "aerial-bearing",
+   "execution_count": 2,
+   "id": "suspected-protein",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ENGLISH_ALPHABET_CHARACTERS = \"abcdefghijklmnopqrstuvwxyz\"\n",
-    "ENGLISH_ALPHABET_LEN = len(ENGLISH_ALPHABET_CHARACTERS)\n",
-    "# TODO: Is this a parameter?\n",
-    "HARDCODED_PERIOD = 26\n",
+    "POSSIBLE_ROTORS = {RotorI, RotorII, RotorIII, RotorIV, RotorV}\n",
+    "POSSIBLE_LETTERS = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
     "\n",
-    "with open('books/Frankenstein.txt', 'r') as book:\n",
-    "    frankestein_book = text = [c for c in \"\".join(book.readlines()).lower() if c in ENGLISH_ALPHABET_CHARACTERS]\n",
+    "def get_random_plugboad(plugboard_size: int):\n",
+    "    letter_sample = random.sample(list(POSSIBLE_LETTERS), plugboard_size*2)\n",
+    "    plugboard_tuples = []\n",
+    "    for i in range(len(letter_sample)//2):\n",
+    "        plugboard_tuples.append((letter_sample[i*2], letter_sample[(i*2)+1]))\n",
+    "    plugboard_tuples = sorted(plugboard_tuples, key=lambda x: x[0])\n",
+    "    return plugboard_tuples\n",
     "\n",
-    "PLUGBOARD_TUPLES = [('A', 'F'), ('G', 'H'), ('Y', 'S'), ('M', 'T')]"
+    "def get_random_config(plugboard_size: int):\n",
+    "    rotors_to_use = random.sample(POSSIBLE_ROTORS, 3)\n",
+    "    offsets = [random.randint(0,25) for _ in range(3)]\n",
+    "    plugboard_tuples = get_random_plugboad(plugboard_size)\n",
+    "    return rotors_to_use, offsets, plugboard_tuples\n",
+    "\n",
+    "def string_to_config(string: str):\n",
+    "    match = re.findall(\"(.+)\\(o:(\\d+),rs:(\\d+)\\)\\|(.+)\\(o:(\\d+),rs:(\\d+)\\)\\|(.+)\\(o:(\\d+),rs:(\\d+)\\)\\|(.*)\", \n",
+    "                       string, re.IGNORECASE)[0]\n",
+    "    available_rotors = {rot.__name__:rot for rot in RotorWithMappingAndNotches.__subclasses__()}\n",
+    "    rotors_classes = [available_rotors[match[0]], available_rotors[match[3]], available_rotors[match[6]]]\n",
+    "    offsets = [int(match[1]), int(match[4]), int(match[7])]\n",
+    "    ringstellungs = [int(match[2]), int(match[5]), int(match[8])]\n",
+    "    plugboard_tuples = []\n",
+    "    for i in range(len(match[9])//2):\n",
+    "        plugboard_tuples.append((match[9][i*2],match[9][(i*2)+1]))\n",
+    "    return rotors_classes, offsets, ringstellungs, plugboard_tuples\n",
+    "\n",
+    "def config_to_string(rotors_classes, offsets, ringstellungs, plugboard_tuples):\n",
+    "    string = \"\"\n",
+    "    for rot, off, rs in zip(rotors_classes, offsets, ringstellungs):\n",
+    "        string += rot.__name__+\"(o:%d,rs:%d)\"%(off,rs)+\"|\"\n",
+    "    for l1, l2 in plugboard_tuples:\n",
+    "        string += l1+l2\n",
+    "    return string\n",
+    "\n",
+    "def transform_to_valid_chars(text: str):\n",
+    "    text = text.upper()\n",
+    "    return \"\".join([c for c in text if c in POSSIBLE_LETTERS])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "solved-polish",
+   "execution_count": 3,
+   "id": "adapted-railway",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Me defino una enigma\n",
+    "PLUGBOARD_SIZE = 10 #Size used by Germany in WW2\n",
+    "rotors, offsets, plugboard_tuples = get_random_config(PLUGBOARD_SIZE)\n",
+    "rotors_to_use = [rot_c(offset=off) \n",
+    "                 for rot_c, off in zip(rotors, offsets)]\n",
     "enigma = Enigma(reflector=ReflectorB(),\n",
-    "                        plugboard=Plugboard(PLUGBOARD_TUPLES),\n",
-    "                        rotors=[RotorIII(offset=2),\n",
-    "                                RotorII(offset=3),\n",
-    "                                RotorI(offset=5)])"
+    "                        plugboard=Plugboard(plugboard_tuples),\n",
+    "                        rotors=rotors_to_use)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "connected-debate",
+   "execution_count": 10,
+   "id": "heard-medium",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Modelo de lenguaje basado en la frecuencia de caracteres en un libro en ingles\n",
     "with open('books/Alices_Adventures_in_Wonderland.txt', 'r') as book:\n",
-    "    freq_kld_model = CharacterFrequencyKLDLanguageModel(book.read())   \n",
+    "    train_book = book.read()\n",
+    "freq_kld_model = CharacterFrequencyKLDLanguageModel(train_book)\n",
+    "markov_1_model = MarkovChainModel(train_book)\n",
     "\n",
     "with open('books/Frankenstein.txt', 'r') as book:\n",
-    "    all_book = \"\".join(book.readlines()).lower()\n",
-    "    frankestein_book = \"\".join([c for c in all_book if c in ENGLISH_ALPHABET_CHARACTERS])"
+    "    frankestein_book = transform_to_valid_chars(\"\".join(book.readlines()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "occupational-weight",
+   "execution_count": 14,
+   "id": "opposed-opening",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Me genero todas las posibles combinaciones de los offsets de los rotores\n",
-    "def crack(language_model, encrypted_message):\n",
-    "    offset_rotor_combinations = list(product(range(ENGLISH_ALPHABET_LEN), repeat = 3))\n",
-    "    kb_divergences = {}\n",
-    "    i=0\n",
-    "    for offsets in tqdm(range(26**3), total=26**3):\n",
+    "# Me genero todas las posibles combinaciones de los offsets de los rotores, para dos modelos distintos\n",
+    "\n",
+    "def crack(encrypted_message):\n",
+    "    kb_divs, markov_1_divs = {}, {}\n",
+    "    \n",
+    "    #for offsets in tqdm(range(26**3), total=26**3):\n",
+    "    for offsets in range(26**3):\n",
     "        off1 = offsets % 26\n",
     "        off2 = (offsets//26) % 26\n",
     "        off3 = (offsets//(26**2)) % 26\n",
     "        enigma_with_given_offset = Enigma(ReflectorB(),\n",
-    "                                          plugboard=Plugboard(PLUGBOARD_TUPLES),\n",
-    "                                          rotors=[\n",
-    "                                              RotorIII(offset=off1),\n",
-    "                                              RotorII(offset=off2),\n",
-    "                                              RotorI(offset=off3)])\n",
+    "                                          plugboard=Plugboard(plugboard_tuples),\n",
+    "                                          rotors= [rot_c(offset=off) \n",
+    "                                                   for rot_c, off in zip(rotors, [off1, off2, off3])]\n",
+    "                                         )\n",
     "        \n",
     "        decrypted_message = enigma_with_given_offset.decrypt(encrypted_message)\n",
-    "        kb_divergences[(off1, off2, off3)] = freq_kld_model.fitness(decrypted_message)\n",
-    "        \n",
-    "        i+=1\n",
-    "    sorted_divergences = sorted(kb_divergences.items(), key=lambda x: x[1], reverse = True)\n",
-    "    return sorted_divergences[:50]"
+    "        kb_divs[(off1, off2, off3)] = freq_kld_model.fitness(decrypted_message)\n",
+    "        markov_1_divs[(off1, off2, off3)] = markov_1_model.fitness(decrypted_message)\n",
+    "    \n",
+    "    kb_divs = sorted(kb_divs.items(), key=lambda x: x[1], reverse = True)\n",
+    "    markov_1_divs = sorted(markov_1_divs.items(), key=lambda x: x[1], reverse = True)\n",
+    "  \n",
+    "    return kb_divs, markov_1_divs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "outstanding-manual",
+   "execution_count": null,
+   "id": "thorough-bowling",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17576/17576 [00:14<00:00, 1247.71it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
+      " 10%|█         | 1/10 [00:32<04:55, 32.80s/it]\u001b[A\n",
+      " 20%|██        | 2/10 [01:03<04:10, 31.35s/it]\u001b[A\n",
+      " 30%|███       | 3/10 [01:31<03:29, 29.98s/it]\u001b[A"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 13.9 s, sys: 115 ms, total: 14 s\n",
-      "Wall time: 14.1 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Para cada longitud, pruebo los diferentes modelos para los diferentes tipos de rotores\n",
+    "\n",
+    "MIN_LEN, MAX_LEN, STEP_LEN = 5, 255, 5\n",
+    "NUMBER_OF_SAMPLES = 10\n",
+    "\n",
+    "crack_time_given_length = defaultdict(list)\n",
+    "rankings_freq, rankings_markov_1 = defaultdict(list), defaultdict(list)\n",
+    "\n",
+    "#for length in tqdm(range(MIN_LEN, MAX_LEN, STEP_LEN)):\n",
+    "for length in tqdm(range(100, 101)):\n",
+    "    for _ in tqdm(range(NUMBER_OF_SAMPLES)):\n",
+    "        import timeit\n",
+    "        \n",
+    "        start = random.randint(0, len(frankestein_book)-length) #Para que si o si tenga lenght \n",
+    "        encrypted_message = enigma.encrypt(frankestein_book[start: start + length])\n",
+    "        start_time_of_crack = timeit.default_timer()\n",
+    "        kb_divs, markov_1_divs = crack(encrypted_message)\n",
+    "        kb_divs_rots, markov_1_rots = [x[0] for x in kb_divs], [x[0] for x in markov_1_divs]\n",
+    "        \n",
+    "        crack_time_given_length[length].append(timeit.default_timer() - start_time_of_crack)\n",
+    "        rankings_freq[length].append(kb_divs_rots.index(tuple(offsets)))\n",
+    "        rankings_markov_1[length].append(markov_1_rots.index(tuple(offsets)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "three-helmet",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "[((2, 3, 5), -0.08709331423756198),\n",
-       " ((18, 15, 10), -0.1865177273234864),\n",
-       " ((6, 4, 14), -0.20347674459395415),\n",
-       " ((21, 23, 11), -0.20656038456261658),\n",
-       " ((14, 9, 9), -0.22710153117373297),\n",
-       " ((18, 2, 4), -0.2278287699201741),\n",
-       " ((3, 12, 19), -0.22857927346877632),\n",
-       " ((14, 24, 9), -0.23090324535932247),\n",
-       " ((1, 0, 8), -0.2309191184878025),\n",
-       " ((9, 11, 12), -0.230929604284494),\n",
-       " ((3, 7, 10), -0.23255072543842153),\n",
-       " ((1, 12, 14), -0.23268682641615207),\n",
-       " ((10, 20, 12), -0.23521032991996804),\n",
-       " ((14, 20, 20), -0.23704545509246253),\n",
-       " ((25, 20, 5), -0.23851493493261194),\n",
-       " ((4, 9, 2), -0.23950688390570812),\n",
-       " ((22, 15, 20), -0.24159852719862077),\n",
-       " ((21, 12, 10), -0.24366586491296374),\n",
-       " ((9, 21, 13), -0.24384920963832635),\n",
-       " ((8, 6, 16), -0.2440916047857562),\n",
-       " ((18, 23, 9), -0.24414652750032081),\n",
-       " ((9, 24, 1), -0.24505864487776777),\n",
-       " ((13, 10, 22), -0.24549225098024052),\n",
-       " ((15, 11, 10), -0.24664809398654888),\n",
-       " ((3, 17, 21), -0.24675917925335739),\n",
-       " ((18, 10, 11), -0.24854835795276325),\n",
-       " ((2, 2, 21), -0.24962120870324972),\n",
-       " ((24, 9, 9), -0.252693184806449),\n",
-       " ((22, 21, 20), -0.2528519758703303),\n",
-       " ((21, 0, 24), -0.25333560529325444),\n",
-       " ((5, 7, 17), -0.25405769152551205),\n",
-       " ((1, 1, 4), -0.25440784125359445),\n",
-       " ((12, 15, 13), -0.2547945935448205),\n",
-       " ((13, 12, 19), -0.2562290594235531),\n",
-       " ((18, 2, 1), -0.25636759259034925),\n",
-       " ((10, 11, 7), -0.25680735113028835),\n",
-       " ((18, 23, 12), -0.2585066812537306),\n",
-       " ((12, 13, 11), -0.25938163626580724),\n",
-       " ((16, 15, 0), -0.25952685335905423),\n",
-       " ((22, 13, 5), -0.2608119278725572),\n",
-       " ((15, 13, 10), -0.2608620781225609),\n",
-       " ((0, 2, 23), -0.26097304773063135),\n",
-       " ((2, 6, 18), -0.2612906676660256),\n",
-       " ((11, 25, 12), -0.26213638336746553),\n",
-       " ((24, 11, 24), -0.26299654585033344),\n",
-       " ((18, 16, 9), -0.26528243114811195),\n",
-       " ((22, 16, 8), -0.2654219174084645),\n",
-       " ((21, 15, 16), -0.26575550648242036),\n",
-       " ((17, 9, 20), -0.26580844180305585),\n",
-       " ((24, 2, 20), -0.2659977927757083)]"
+       "(defaultdict(list, {100: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]}),\n",
+       " defaultdict(list,\n",
+       "             {100: [4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816,\n",
+       "               4816]}),\n",
+       " defaultdict(list,\n",
+       "             {100: [11.64096172000427,\n",
+       "               11.760646540999005,\n",
+       "               11.541344733006554,\n",
+       "               11.554207290995691,\n",
+       "               11.571838194999145,\n",
+       "               11.583171446000051,\n",
+       "               11.670931143002235,\n",
+       "               11.575419018001412,\n",
+       "               11.63612681599625,\n",
+       "               11.65871626700391]}))"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "type(frankestein_book)\n",
-    "crack(freq_kld_model, enigma.encrypt(frankestein_book[100:200]))"
+    "rankings_freq, rankings_markov_1, crack_time_given_length"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "photographic-uzbekistan",
+   "id": "incomplete-theme",
    "metadata": {},
    "outputs": [],
    "source": []
