--- a/informe.tex
+++ b/informe.tex
@@ -1,9 +1,24 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{TP - Criptografía}
-\author{urielkelman }
-\date{February 2021}
+\title{ \Huge \textbf {Informe}}
+\author{
+  \Huge Uriel Kelman\\
+  \\
+  \LARGE {Padrón Nro. 99616}   \\  \\
+  \LARGE    \texttt{urielkelman@gmail.com}                                              \\[2.5ex]
+  \LARGE   1er. Cuatrimestre de 2019                                      \\
+  \\
+  \LARGE Análisis de Circuitos\\
+  \\
+  \LARGE  Facultad de Ingeniería, Universidad de Buenos Aires            \\}
+\date{\today}
+\begin{document}
+  \maketitle
+  \thispagestyle{empty}
+  \newpage
+  \tableofcontents
+  \newpage
 
 \begin{document}
 
