Correccion en el informe

--- a/informe.tex
+++ b/informe.tex
@@ -37,7 +37,7 @@
   \Huge Criptoanálisis de la Máquina Enigma\\
   \\
   \LARGE {Gianmarco Cafferata: 99423} \\
-  \LARGE {Julián Ferres: } \\
+  \LARGE {Julián Ferres: 101483} \\
   \LARGE {Uriel Kelman: 99616} \\
   \\
   \LARGE   2do. Cuatrimestre de 2020 \\
@@ -468,7 +468,7 @@ Esto nos sugiere que si volvemos a correr el algoritmo pero fijando o bien los r
 \subsubsection{Diferencias con la implementación original}
 \begin{itemize}
   \item No se aprecia mucha diferencia en el porcentaje de éxito según el tamaño del plugboard.
-  \item Al algoritmo implementado le fueron más costosos los casos con tamaños de plugboard más chico y menos para tamaños de plugboards más grandes.
+  \item El algoritmo tuvo un mayor error en los casos con tamaños de plugboard más chico y menor error para tamaños de plugboards más grandes que lo esperado según paper original.
 \end{itemize}
 
 Esta última diferencia puede tener su origen debido a una multiplicidad de factores: puede deberse a detalles de implementación, a los cambios propios introducidos, a los modelos del lenguaje utilizados, a tomar muestras mucho más chicas o también al corpus utilizado para entrenar dichos modelos.
