Pongo el link como el del tag

--- a/informe.tex
+++ b/informe.tex
@@ -40,7 +40,7 @@
   \LARGE {Julián Ferres: 101483} \\
   \LARGE {Uriel Kelman: 99616} \\
   \\
-  Repositorio del Proyecto: \href{https://github.com/jian01/cripto-enigma-tp}{https://github.com/jian01/cripto-enigma-tp} \\
+  Repositorio: \href{https://github.com/jian01/cripto-enigma-tp/tree/EntregaFinal}{https://github.com/jian01/cripto-enigma-tp/tree/EntregaFinal} \\
   \\
 
   \LARGE   2do. Cuatrimestre de 2020 \\
